name:                adventofcode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alech/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Klink
maintainer:          git@alech.de
copyright:           2018 Alexander Klink
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1
  hs-source-dirs:      src
  main-is:             Day1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day2
  hs-source-dirs:      src
  main-is:             Day2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day3
  hs-source-dirs:      src
  main-is:             Day3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , split >= 0.2.3.3 && < 0.3

executable day4
  hs-source-dirs:      src
  main-is:             Day4.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , sort >= 1.0.0.0 && < 1.1

executable day5
  hs-source-dirs:      src
  main-is:             Day5.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day6
  hs-source-dirs:      src
  main-is:             Day6.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day7
  hs-source-dirs:      src
  main-is:             Day7.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day8
  hs-source-dirs:      src
  main-is:             Day8.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsers
                     , safe

executable day9
  hs-source-dirs:      src
  main-is:             Day9.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , deepseq
                     , pointedlist

executable day10
  hs-source-dirs:      src
  main-is:             Day10.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsers
                     , JuicyPixels

executable day11
  hs-source-dirs:      src
  main-is:             Day11.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , deepseq
